[gd_scene load_steps=5 format=3 uid="uid://dfxnei0ass6fv"]

[ext_resource type="Script" path="res://scripts/game/window_long.gd" id="1_k8wek"]
[ext_resource type="Texture2D" uid="uid://bljn4lqgygmsh" path="res://assets/imgs/game sprites/window1.png" id="1_srsfl"]
[ext_resource type="Theme" uid="uid://bqf8rudx067vu" path="res://scenes/themes/window_text.tres" id="2_7lwaf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m7vv0"]
radius = 21.587

[node name="window_long" type="Node2D"]
script = ExtResource("1_k8wek")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(250, 318)
texture = ExtResource("1_srsfl")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(60, 54)
shape = SubResource("CircleShape2D_m7vv0")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(434, 516)
offset_left = 30.0
offset_top = 90.0
offset_right = 464.0
offset_bottom = 606.0
theme = ExtResource("2_7lwaf")
text = "March 3: 3:25 A.M
W-what is that? I stared and stared. A lady with sickly milk coloured face with thick black hair spilling down, covering her face. She is wearing a traditional white kimono with a large red obi. She turned to me. Suddenly her neck and hand stretched and it came closer and closer. I could only watch in horror as the monster’s limbs bent and twisted in weird angles. She looks just like Zine, but her teeth are pointy with blood all around her mouth and grinning at me, crazed. I took a step back, but my body wouldn’t budge an inch. 
“The chosen one” a raspy voice came from the monster.  “Master…Have…Came…Home…” She whispers. Suddenly her entire body shriveled and shifted, and compacted. A singular object dropped in front of me. A USB.

Alex Out."
autowrap_mode = 2

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
